FIND_PACKAGE(OpenGL)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
LINK_LIBRARIES(${OPENGL_LIBRARIES})

FIND_PACKAGE(ZLIB)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
LINK_LIBRARIES(${ZLIB_LIBRARY})

FIND_PACKAGE(SDL)
INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
LINK_LIBRARIES(${SDL_LIBRARY})

FIND_PACKAGE(PNG)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
LINK_LIBRARIES(${PNG_LIBRARIES})

FIND_PACKAGE(JPEG)
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
LINK_LIBRARIES(${JPEG_LIBRARIES})

FIND_PACKAGE(Lua)
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
LINK_LIBRARIES(${LUA_LIBRARIES})

FIND_PACKAGE(Freetype)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
LINK_LIBRARIES(${FREETYPE_LIBRARIES})

SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/math
    ${CMAKE_CURRENT_SOURCE_DIR}/engine
    ${CMAKE_CURRENT_SOURCE_DIR}/system
    ${CMAKE_CURRENT_SOURCE_DIR}/ui
    ${CMAKE_CURRENT_SOURCE_DIR}/game)

ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(game)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(system)

ADD_EXECUTABLE(AllInAMousesNight main.c config.h)
TARGET_LINK_LIBRARIES(AllInAMousesNight game ui engine math system)
IF (UNIX OR APPLE)
    TARGET_LINK_LIBRARIES(AllInAMousesNight m)
ENDIF ()
