ADD_LIBRARY(engine STATIC 
    e_device.h
    e_font.c
    e_common.c
    e_programs.c
    e_common.h
    e_shadow.h
    e_texture.h
    e_shadow.c
    e_map.h
    e_skeleton.c
    e_model.h
    e_particles.h
    e_blur.h
    e_device.c
    e_texture.c
    e_camera.c
    e_model.c
    e_blur.c
    e_utils.c
    e_skeleton.h
    e_map.c
    e_camera.h
    #e_sound.c
    #e_sound.h
    e_particles.c
    e_programs.h
    e_font.h
    e_utils.h)
