ADD_LIBRARY(game STATIC
    g_world.h
    g_world.c
    g_math.c
    g_common.h
    g_interface.h
    g_controller.h
    g_game.c
    g_interface.c
    g_game.h
    g_variables.h
    g_script.c
    g_script.h
    g_variables.c
    g_controller.c
    g_console.h
    g_math.h
    g_console.c
    g_common.c
    g_character.h
    g_character.c)
