ADD_LIBRARY(math STATIC
    mt_quaternion.h
    mt_mesh.h
    mt_collision.c
    mt_common.c
    mt_table.c
    mt_quaternion.c
    mt_primes.h
    mt_collision.h
    mt_plane.c
    mt_transform.c
    mt_matrix.h
    mt_plane.h
    mt_table.h
    mt_matrix.c
    mt_common.h
    mt_mesh.c
    mt_vector.c
    mt_divider.c
    mt_divider.h
    mt_vector.h
    mt_transform.h
    mt_primes.c)
