ADD_LIBRARY(ui STATIC
    ui_button.h
    ui_text.h
    ui_menu.h
    ui_common.h
    ui_menu.c
    ui_list.h
    ui_check.c
    ui_edit.c
    ui_button.c
    ui_tab.c
    ui_tab.h
    ui_common.c
    ui_list.c
    ui_frame.h
    ui_edit.h
    ui_progress.c
    ui_text.c
    ui_progress.h
    ui_check.h
    ui_frame.c)
